--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="field">
     <%= f.label :username %><br />
-    <%= f.email_field :username, autocomplete: "username" %>
+    <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
   </div>
   <div class="field">
     <%= f.label :password %>
