Change the signed in logic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,11 @@
     <% if flash[:alert]%>
       <p class="alert"><%= alert %></p>
     <% end %>
+    <p>
+      <% if user_signed_in? %>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, class:"button is-info" %>
+   
+    <% end %>
+    </p>
   </body>
 </html>
