--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,14 +14,19 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.post %></td>
+        <td><%= post.user.username %></td>
         <td><%= link_to 'Show', post %></td>
+        <% if user_signed_in? %>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<% if !user_signed_in? %>
+  <%= link_to "Login", new_user_session_path, class:"button is-info" %>
+  <% end %>
 <br>
 
 <%= link_to 'New Post', new_post_path %>
