--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,5 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Posts</h1>
-
 <table>
   <thead>
     <tr>
@@ -9,17 +7,15 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
+    <% if !user_signed_in? %>
+      <h1>Log in to see the posts!</h1>
+    <% end %>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.post %></td>
-        
-        <td><%= link_to 'Show', post %></td>
         <% if user_signed_in? %>
-        <td><%= post.user.username %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= post.user.username %></td>
+          <td><%= post.post %></td>
         <% end %>
       </tr>
     <% end %>
@@ -27,7 +23,6 @@
 </table>
 <% if !user_signed_in? %>
   <%= link_to "Login", new_user_session_path, class:"button is-info" %>
-  <% end %>
+<% end %>
 <br>
-
 <%= link_to 'New Post', new_post_path %>
