--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,12 @@
 <p id="notice"><%= notice %></p>
-<h1>Posts</h1>
 <table>
   <thead>
     <tr>
-      <th>Post</th>
+      <th>Posts</th>
       <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
-    <% if !user_signed_in? %>
-      <h1>Log in to see the posts!</h1>
-    <% end %>
     <% @posts.each do |post| %>
       <tr>
         <% if user_signed_in? %>
